--- a/ltmain.in
+++ b/ltmain.in
@@ -2181,7 +2181,7 @@ static const void *lt_preloaded_setup() {
 
       if test "$hardcode_action" = relink; then
 	# AGH! Flame the AIX and HP-UX people for me, will ya?
-	$echo "$modename: warning: this platform doesn\'t like uninstalled shared libraries" 1>&2
+	$echo "$modename: warning: this platform does not like uninstalled shared libraries" 1>&2
 	$echo "$modename: \`$output' will be relinked during installation" 1>&2
       fi
 
