* Makefile.am (@DIST_MAKEFILE_LIST@): work around Ultrix /bin/sh bug * tests/nomode.test (must specify a MODE): ditto Reported by Rainer Orth <ro@TechFak.Uni-Bielefeld.DE> * THANKS: Added Rainer Orth

--- a/Makefile.am
+++ b/Makefile.am
@@ -75,7 +75,7 @@ configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
 @DIST_MAKEFILE_LIST@:
 	dir=`echo $@ | sed 's,^[^/]*$$,.,;s,/[^/]*$$,,'`; \
 	test -d $$dir || mkdir $$dir || exit 1; \
-	abs_srcdir=`cd $(top_srcdir) >/dev/null && pwd`; \
+	abs_srcdir=`cd $(top_srcdir) && pwd`; \
 	(cd $$dir && $$abs_srcdir/$$dir/configure) || exit 1
 
 # Create and install libltdl.tar.gz
