* tests/demo-shared.test, tests/demo-static.test: new tests * tests/mdemo-shared.test, tests/mdemo-static.test: ditto * tests/Makefile.am: ditto * doc/libtool.texi: document them * demo/Makefile.am, mdemo/Makefile.am (@STATIC@): do not use -static unconditionally, it can't work with --disable-static * demo/configure.in, mdemo/configure.in: check whether libtool was configured to build static libraries and, if not, set STATIC to an empty string

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -29,7 +29,7 @@ hell_LDADD = libhello.la
 # Create an easier-to-debug version of hell.
 hell_debug_SOURCES = main.c
 hell_debug_LDADD = libhello.la
-hell_debug_LDFLAGS = -static
+hell_debug_LDFLAGS = @STATIC@
 
 if BINARY_HELLDL
 
