--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,12 +2,20 @@
 
 AUTOMAKE_OPTIONS = gnits
 
-TESTS = demo-conf.test demo-make.test demo-exec.test \
+TESTS = demo-static.test demo-make.test demo-exec.test \
+	demo-inst.test demo-unst.test hardcode.test \
+	mdemo-static.test mdemo-make.test mdemo-exec.test \
+	mdemo-inst.test mdemo-unst.test \
+	cdemo-static.test cdemo-make.test cdemo-exec.test \
+	demo-conf.test demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test hardcode.test \
 	mdemo-conf.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
 	cdemo-conf.test cdemo-make.test cdemo-exec.test \
-	cdemo-static.test cdemo-make.test cdemo-exec.test \
+	demo-shared.test demo-make.test demo-exec.test \
+	demo-inst.test demo-unst.test hardcode.test \
+	mdemo-shared.test mdemo-make.test mdemo-exec.test \
+	mdemo-inst.test mdemo-unst.test \
 	cdemo-shared.test cdemo-make.test cdemo-exec.test \
 	link.test link-2.test nomode.test \
 	quote.test sh.test suffix.test
