* mdemo/Makefile.am (../libltdl/libtool): if it does not exist, the sub-make for libltdlc.la will take care of it, but we must at least provide an empty rule for it, otherwise the sub-make will never run

--- a/mdemo/Makefile.am
+++ b/mdemo/Makefile.am
@@ -21,6 +21,9 @@ bin_PROGRAMS = mdemo mdemo.debug
 ../libltdl/libltdlc.la: ../libtool ../libltdl/libtool \
     $(srcdir)/../libltdl/ltdl.c $(srcdir)/../libltdl/ltdl.h
 	(cd ../libltdl; $(MAKE) libltdlc.la)
+# Without the following line, the check may fail if libltdl/libtool is
+# removed after libltdl is configured
+../libltdl/libtool:
 
 # Create a version of mdemo that does dlopen.
 mdemo_SOURCES = main.c
