* ltmain.in (Xsed): add 1 to Xsed definition that goes into temporary wrapper scripts * libtool.m4: we don't have Xsed here, expand it manually Reported by Pavel Roskin <pavel_roskin@geocities.com>

--- a/ltmain.in
+++ b/ltmain.in
@@ -2356,7 +2356,7 @@ static const void *lt_preloaded_setup() {
 
 # Sed substitution that helps us do robust quoting.  It backslashifies
 # metacharacters that are still active within double-quoted strings.
-Xsed='sed -e s/^X//'
+Xsed='sed -e 1s/^X//'
 sed_quote_subst='$sed_quote_subst'
 
 # The HP-UX ksh and POSIX shell print the target directory to stdout
