--- a/Makefile.am
+++ b/Makefile.am
@@ -61,11 +61,11 @@ update-timestamps:
 # Line numbering transliterated from a section in autoconf (Autoconf 2.12).
 $(srcdir)/ltconfig: $(srcdir)/ltconfig.in $(top_srcdir)/configure.in $(TSDEPS)
 	rm -f ltconfig.T
-	date=`sed 's/.*\$$Date$$]*\)\$$.*/ (\1)/;t;d' \
+	date=`sed 's%.*\$$''Date: \([0-9 /]*[0-9:]*\) \$$.*% (\1)%;t;d' \
 		< $(srcdir)/ChangeLog` && \
 	$(AWK) '/@LINENO@/ { printf "%d:", NR } { print }' $(srcdir)/ltconfig.in | \
 	  sed -e 's/@''PACKAGE@/@PACKAGE@/' -e 's/@''VERSION@/@VERSION@/' \
-	      -e "s/@""TIMESTAMP@/$$date/" \
+	      -e "s%@""TIMESTAMP@%$$date%" \
 	      -e '/@LINENO@/s/^\([0-9][0-9]*\):\(.*\)@LINENO@/\2\1/' \
 		> ltconfig.T
 	chmod +x ltconfig.T
@@ -74,10 +74,10 @@ $(srcdir)/ltconfig: $(srcdir)/ltconfig.in $(top_srcdir)/configure.in $(TSDEPS)
 
 $(srcdir)/ltmain.sh: $(srcdir)/ltmain.in $(top_srcdir)/configure.in $(TSDEPS)
 	rm -f ltmain.shT
-	date=`sed 's/.*\$$Date$$]*\)\$$.*/ (\1)/;t;d' \
+	date=`sed 's%.*\$$''Date: \([0-9 /]*[0-9:]*\) \$$.*% (\1)%;t;d' \
 		< $(srcdir)/ChangeLog` && \
 	sed -e 's/@''PACKAGE@/@PACKAGE@/' -e 's/@''VERSION@/@VERSION@/' \
-	    -e "s/@""TIMESTAMP@/$$date/" $(srcdir)/ltmain.in > ltmain.shT
+	    -e "s%@""TIMESTAMP@%$$date%" $(srcdir)/ltmain.in > ltmain.shT
 	mv -f ltmain.shT $@ || \
 	(rm -f $@ && cp ltmain.shT $@ && rm -f ltmain.shT)
 
