--- a/ltmain.in
+++ b/ltmain.in
@@ -1774,7 +1774,7 @@ EOF
 	    fi
 	  done # Gone through all deplibs.
 	  ;;
-	none | unknown | *) newdeplibs="";
+	none | unknown | *) newdeplibs=""
 	  if $echo "X$deplibs" | $Xsed -e 's/ -lc$//' -e 's/[ 	]//g' \
 	     | grep . >/dev/null; then
 	    droppeddeps=yes
