* Makefile.am (install-data-hook): Don't show the if expression that tests for gzip with a conditional error message; just do it quietly and show the error if it fails, or the next action if it succeeds.

--- a/Makefile.am
+++ b/Makefile.am
@@ -97,12 +97,14 @@ configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
 
 # Create and install libltdl.tar.gz
 install-data-hook: libltdl/Makefile
-	if (cd libltdl && $(MAKE) distdir distdir=libltdl && \
+	@echo 'cd libltdl && $(MAKE) distdir distdir=libltdl && tar -cf libltdl.tar libltdl && gzip $(GZIP_ENV) libltdl.tar'
+	@if (cd libltdl && $(MAKE) distdir distdir=libltdl && \
 	 tar -cf libltdl.tar libltdl && \
 	 gzip $(GZIP_ENV) libltdl.tar); then \
+	  echo "$(INSTALL_DATA) libltdl/libltdl.tar.gz $(pkgdatadir)/libltdl.tar.gz"; \
 	  $(INSTALL_DATA) libltdl/libltdl.tar.gz $(pkgdatadir)/libltdl.tar.gz; \
 	else \
-	  echo Warning: without gzip, libtool cannot install libltdl.tar.gz; \
+	  echo "Warning: without gzip, libtool cannot install libltdl.tar.gz"; \
 	fi; \
 	rm -rf libltdl/libltdl libltdl/libltdl.tar libltdl/libltdl.tar.gz
 
