* cdemo/configure.in: renamed AM_PROG_LIBTOOL to AC_PROG_LIBTOOL * demo/configure.in: likewise * depdemo/configure.in: likewise * libltdl/configure.in: likewise * mdemo/configure.in: likewise * libltdl/ltdl.c: in find_module() check whether libdir is defined,   tryall_dlopen(): move deallocation of an already opened handle   to lt_dlopen(), allocate the directory in lt_dlopen() dynamically,   minor cleanups, fixed memory leak (name) * libtool.m4: renamed all AM_ macros to AC_ and added aliases for   compatibilty, updated AC_SYS_NM_PARSE (no undefined symbols,   don't count the symbols) * ltconfig.in: added thread_safe_flag_spec (not used yet),   added generic variable for linker options "linkopts" in   all archive_cmds * ltmain.in: added -thread-safe flag (unused)

--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -21,7 +21,7 @@ AC_SUBST(NOINSTLIBS)
 AC_PROG_CC
 AC_C_CONST
 AC_C_INLINE
-AM_PROG_LIBTOOL
+AC_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
 AC_CACHE_CHECK([which extension is used for shared libraries],
@@ -112,7 +112,7 @@ if test "$test_dlerror" = yes; then
  LIBS="$LIBS_SAVE"
 fi
 
-AM_SYS_SYMBOL_UNDERSCORE
+AC_SYS_SYMBOL_UNDERSCORE
 if test x"$USE_SYMBOL_UNDERSCORE" = xyes; then
   if test x"$ac_cv_func_dlopen" = xyes ||
      test x"$ac_cv_lib_dl_dlopen" = xyes ; then
