--- a/ltmain.in
+++ b/ltmain.in
@@ -656,6 +656,7 @@ compiler."
     convenience=
     old_convenience=
     deplibs=
+    linkopts=
 
     if test -n "$shlibpath_var"; then
       # get the directories listed in $shlibpath_var
@@ -688,6 +689,7 @@ compiler."
     perm_rpath=
     temp_rpath=
     finalize_rpath=
+    thread_safe=no
     vinfo=
 
     # We need to know -static, to get the right output filenames.
@@ -902,6 +904,11 @@ compiler."
 	  compile_command="$compile_command $link_static_flag"
 	  finalize_command="$finalize_command $link_static_flag"
 	fi
+	continue
+	;;
+
+      -thread-safe)
+	thread_safe=yes
 	continue
 	;;
 
