* configure.in (pkgdatadir): define pkgdatadir explicitly, and * Makefile.am (aclocaldir): do not set it explicitly, automake does already

--- a/configure.in
+++ b/configure.in
@@ -24,7 +24,8 @@ changequote([,])
     ;;
 esac    
 
-AC_SUBST(pkgdatadir)
+pkgdatadir='${datadir}/${PACKAGE}'
+AC_SUBST(pkgdatadir) dnl automake does not need this, but libtoolize does
 aclocaldir='${datadir}/aclocal'
 AC_SUBST(aclocaldir)
 
