--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -21,7 +21,7 @@ AC_SUBST(NOINSTLIBS)
 AC_PROG_CC
 AC_C_CONST
 AC_C_INLINE
-AC_PROG_LIBTOOL
+AM_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
 AC_CACHE_CHECK([which extension is used for shared libraries],
