--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -5,18 +5,18 @@ AM_INIT_AUTOMAKE(libltdl,1.0,-)
 
 AM_MAINTAINER_MODE
 
+TOINST=toinst
+AC_SUBST(TOINST)
+
 AC_ARG_ENABLE(ltdl-install,
   [--enable-ltdl-install     install libltdl])
 AM_CONDITIONAL(INSTALL_LTDL, test x$enable_ltdl_install = xyes)
 if test x$enable_ltdl_install = xyes; then
-  LIBLIBS=libltdl.la
-  NOINSTLIBS=
+  LIBLIBS=$TOINST/libltdl.la
 else
   LIBLIBS=
-  NOINSTLIBS=libltdl.la
 fi
 AC_SUBST(LIBLIBS)
-AC_SUBST(NOINSTLIBS)
 
 AC_PROG_CC
 AC_C_CONST
