--- a/configure.in
+++ b/configure.in
@@ -44,10 +44,10 @@ dnl included in the distribution
 CONF_SUBDIRS="libltdl demo mdemo cdemo" # depdemo
 AC_SUBST(CONF_SUBDIRS)
 
-ACINCLUDE_M4_LIST="\$(srcdir)/acinclude.m4 "
+ACINCLUDE_M4_LIST="${srcdir}/acinclude.m4 "
 DIST_MAKEFILE_LIST=
 for dir in $CONF_SUBDIRS; do
-  ACINCLUDE_M4_LIST="$ACINCLUDE_M4_LIST\$(srcdir)/$dir/acinclude.m4 "
+  ACINCLUDE_M4_LIST="$ACINCLUDE_M4_LIST${srcdir}/$dir/acinclude.m4 "
   DIST_MAKEFILE_LIST="$DIST_MAKEFILE_LIST$dir/Makefile "
 done
 AC_SUBST(ACINCLUDE_M4_LIST)
