--- a/ltconfig.in
+++ b/ltconfig.in
@@ -106,7 +106,7 @@ if test "X`($echo '\t') 2>/dev/null`" != 'X\t' ||
       exec "$CONFIG_SHELL" "$0" --no-reexec ${1+"$@"}
     else
       # Try using printf.
-      echo='printf %s\n'
+      echo='printf "%s\n"'
       if test "X`($echo '\t') 2>/dev/null`" = 'X\t' &&
 	 test "X`($echo "$echo_test_string") 2>/dev/null`" = X"$echo_test_string"; then
 	# Cool, printf works
