* libtoolize.in: search for A[MC]_PROG_LIBTOOL, not AM_PROG_LIBTOOL Reported by Jeff Garzik <jgarzik@pobox.com>

--- a/libtoolize.in
+++ b/libtoolize.in
@@ -184,7 +184,7 @@ else
 fi
 
 if test -z "$automake"; then
-  if egrep '^AM_PROG_LIBTOOL' configure.in >/dev/null 2>&1; then :
+  if egrep '^A[MC]_PROG_LIBTOOL' configure.in >/dev/null 2>&1; then :
   else
     echo "Remember to add \`AM_PROG_LIBTOOL' to \`configure.in'."
   fi
@@ -199,15 +199,15 @@ if test -z "$automake"; then
     updatemsg="add the contents of \`$libtool_m4' to \`aclocal.m4'"
   fi
 
-  if egrep '^AC_DEFUN\(AM_PROG_LIBTOOL' aclocal.m4 >/dev/null 2>&1; then
+  if egrep '^AC_DEFUN\(A[MC]_PROG_LIBTOOL' aclocal.m4 >/dev/null 2>&1; then
     # Check the version number on libtool.m4 and the one used in aclocal.m4.
-    instserial=`grep '^# serial ' $libtool_m4 | grep 'AM_PROG_LIBTOOL' | sed -e 's/^# serial \([0-9][0-9]*\).*$/\1/; q'`
+    instserial=`grep '^# serial ' $libtool_m4 | grep 'A[MC]_PROG_LIBTOOL' | sed -e 's/^# serial \([0-9][0-9]*\).*$/\1/; q'`
 
     if test -z "$instserial"; then
       echo "$progname: warning: no serial number on \`$libtool_m4'" 1>&2
     else
       # If the local macro has no serial number, we assume it's ancient.
-      localserial=`grep '^# serial ' aclocal.m4 | grep 'AM_PROG_LIBTOOL' | sed -e 's/^# serial \([0-9][0-9]*\).*$/\1/; q'`
+      localserial=`grep '^# serial ' aclocal.m4 | grep 'A[MC]_PROG_LIBTOOL' | sed -e 's/^# serial \([0-9][0-9]*\).*$/\1/; q'`
 
       test -z "$localserial" && localserial=0
 
